--- a/fav.html
+++ b/fav.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Navbar starts -->
     <nav>
-      <a id="logo" href="Imdb.html"> Back </a>
+      <a id="logo" href="index.html"> Back </a>
     </nav>
     <!-- Navbar ends -->
 
